--- a/amaterasu.html
+++ b/amaterasu.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-md sticky-top">
         <div class="container-fluid ">
             <!--<a href="" class="navbar-brand text-light">Mounika</a>-->
-            <img src="../image/a.logo.png" width="50px" height="50px"class="rounded-circle" alt="">
+            <img src="image/a.logo.png" width="50px" height="50px"class="rounded-circle" alt="">
 
             <h2 class="text-light"> Amaterasu Software Solutions</h2>
 
