--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
       }
         body {
 
-            background-image: url("../image/service.jpg");
+            background-image: url("image/service.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
