--- a/search job.html
+++ b/search job.html
@@ -44,7 +44,7 @@
   <body>
     <nav class="navbar navbar-expand-md aticky-top">
         <div class="container-fluid ">
-            <img src="../image/a.logo.png" width="50px" height="50px"class="rounded-circle" alt="">
+            <img src="image/a.logo.png" width="50px" height="50px"class="rounded-circle" alt="">
             <h1 class="text-light">JOB PORTAL</h1>
        
             <ul class="navbar nav">
